bindings/rust/idax-sys/shim/idax_shim.h

/* ═══════════════════════════════════════════════════════════════════════════
 * Error category constants (matching ida::ErrorCategory)
 * ═══════════════════════════════════════════════════════════════════════════ */

#define IDAX_ERROR_NONE         0
#define IDAX_ERROR_VALIDATION   1
#define IDAX_ERROR_NOT_FOUND    2
#define IDAX_ERROR_CONFLICT     3
#define IDAX_ERROR_UNSUPPORTED  4
#define IDAX_ERROR_SDK_FAILURE  5
#define IDAX_ERROR_INTERNAL     6
/* ═══════════════════════════════════════════════════════════════════════════
 * Error handling
 * ═══════════════════════════════════════════════════════════════════════════ */

/** Get the error category from the last failed call (thread-local). */
int idax_last_error_category(void);
/** Get the error code from the last failed call (thread-local). */
int idax_last_error_code(void);
/** Get the error message from the last failed call (thread-local).
 *  Returns a pointer to a thread-local buffer. Do NOT free. */
const char* idax_last_error_message(void);
/** Exact context of the last error (empty when absent). Borrowed until the
 * next shim operation on the same thread. The message accessor retains its
 * existing human-readable context suffix for source compatibility. */
const char* idax_last_error_context(void);
/** Exact last error message without the legacy human-readable context suffix.
 * Borrowed until the next shim operation on the same thread. */
const char* idax_last_error_message_only(void);
/** Free a malloc'd string returned by an idax function. */
void idax_free_string(char* s);
/** Free a malloc'd byte array returned by an idax function. */
void idax_free_bytes(uint8_t* p);
/** Free a malloc'd uint64 array returned by an idax function. */
void idax_free_addresses(uint64_t* p);
/* ═══════════════════════════════════════════════════════════════════════════
 * Script / IDC values and synchronous execution (ida::script)
 * ═══════════════════════════════════════════════════════════════════════════ */

typedef void* IdaxScriptValueHandle;
typedef struct IdaxScriptResolvedName {
    const char* name;
    uint64_t value;
} IdaxScriptResolvedName;
typedef struct IdaxScriptCompileOptions {
    int only_safe_functions;
    const IdaxScriptResolvedName* resolved_names;
    size_t resolved_name_count;
} IdaxScriptCompileOptions;
typedef struct IdaxScriptFileCompileOptions {
    int delete_macros_after_compilation;
    int allow_program_labels;
    int only_safe_functions;
} IdaxScriptFileCompileOptions;
typedef struct IdaxScriptCompilationResult {
    int succeeded;
    char* error;
} IdaxScriptCompilationResult;
typedef struct IdaxScriptExecutionResult {
    int succeeded;
    IdaxScriptValueHandle value;
    char* error;
} IdaxScriptExecutionResult;
typedef struct IdaxScriptIntegerExecutionResult {
    int succeeded;
    int64_t value;
    char* error;
} IdaxScriptIntegerExecutionResult;
void idax_script_value_free(IdaxScriptValueHandle value);
int idax_script_value_clone(IdaxScriptValueHandle value,
                            IdaxScriptValueHandle* out);
int idax_script_value_integer(int64_t value, IdaxScriptValueHandle* out);
int idax_script_value_string(const uint8_t* value, size_t length,
                             IdaxScriptValueHandle* out);
int idax_script_value_floating(double value, IdaxScriptValueHandle* out);
int idax_script_value_object(IdaxScriptValueHandle* out);
int idax_script_value_kind(IdaxScriptValueHandle value, int* out);
int idax_script_value_as_integer(IdaxScriptValueHandle value, int64_t* out);
int idax_script_value_as_floating(IdaxScriptValueHandle value, double* out);
int idax_script_value_as_string(IdaxScriptValueHandle value,
                                uint8_t** out, size_t* length);
int idax_script_value_coerce_integer(IdaxScriptValueHandle value, int64_t* out);
int idax_script_value_coerce_floating(IdaxScriptValueHandle value, double* out);
int idax_script_value_coerce_string(IdaxScriptValueHandle value,
                                    uint8_t** out, size_t* length);
int idax_script_value_render(IdaxScriptValueHandle value, const char* name,
                             size_t indent, char** out);
int idax_script_value_deep_copy(IdaxScriptValueHandle value,
                                IdaxScriptValueHandle* out);
int idax_script_value_class_name(IdaxScriptValueHandle value, char** out);
int idax_script_value_attribute(IdaxScriptValueHandle value, const char* name,
                                int use_handler, IdaxScriptValueHandle* out);
/* ═══════════════════════════════════════════════════════════════════════════
 * Address bookmarks (ida::bookmark)
 * ═══════════════════════════════════════════════════════════════════════════ */

#define IDAX_BOOKMARK_MAX_SLOTS 1024